# python-ml-template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  Makefile.jinja  README.md  README.md.jinja  copier.yml  environment.yml  pyproject.toml  pyproject.toml.jinja
.github/: pull_request_template.md  pull_request_template.md.jinja
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  config.yml
.github/workflows/: ci_main.yml
config/: commitlint.sh
docs/: 0_overview.md  0_overview.md.jinja  1_core_components.md  2_dynamic_templating.md  3_python_env_definition.md  4_git_simplified.md  5_github_streamlined.md
images/: demo.yml
src/: logger.py  main.py  utils.py
tests/: conftest.py
tests/fixtures/: example.py
tests/unit/: test_example.py
